--- a/css/style.css
+++ b/css/style.css
@@ -73,18 +73,20 @@ header{
   }
 
   
-header a:hover{
+  header a:hover{
     color:#cccccc;
     font-weight:bold;
   }
+  
   /* Showcase */
-#showcase{
+  #showcase{
     min-height:400px;
-    background:url('../img/showcase.jpg') no-repeat 0 -400px;
+    background:url('../img/backgroundimage.jpg') center/cover;
     text-align:center;
     color:#ffffff;
+    
   }
-  
+
   #showcase h1{
     margin-top:100px;
     font-size:55px;
